// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component with children props 1`] = `
<div
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "lightgrey",
        "borderRadius": 1000,
        "display": "flex",
        "height": 200,
        "justifyContent": "center",
        "width": 200,
      },
      Object {},
    ]
  }
>
  hello
</div>
`;

exports[`Avatar component with src props 1`] = `
<img
  source="https://material-ui-next.com/static/images/remy.jpg"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "lightgrey",
        "borderRadius": 1000,
        "display": "flex",
        "height": 70,
        "justifyContent": "center",
        "width": 70,
      },
      Object {},
    ]
  }
/>
`;
